# gramine

./: Makefile  Makefile_client  Makefile_orchestrator  Makefile_sdse  Makefile_sdse_client  README.md  README.rst  client.cpp  client.h  example_client.manifest.template  main.cpp  main_orchestrator.cpp  orchestrator.cpp  orchestrator.h  protocol.h  sample_gpu_manifest.toml  sdse_client.cpp  sdse_client.h  sdse_client.manifest.template  sdse_client_main.cpp  sdse_main.cpp  sdse_protocol.h  sdse_server.cpp  sdse_server.h  sdse_server.manifest.template  server.cpp  server.h  shared_enclave_server.manifest.template  vector_add.ptx
CI-Examples/: Makefile  gemm_Makefile  gemm_example.c  gemm_kernel.ptx  run_benchmarks.sh  run_vector_add_test.sh
CI-Examples/client-enclave/: client-enclave-gemm.manifest.template  client-enclave-onnx.manifest.template  client-enclave.manifest.template  meson.build
CI-Examples/client-enclave/src/: client_app.c  client_app_batch.c  client_app_gemm.c  client_app_onnx.c
CI-Examples/common/: shared_service.h
CI-Examples/native-apps/: Makefile  gemm_native.direct.manifest.template  onnx_native.direct.manifest.template  vector_add_native.manifest.template
CI-Examples/native-apps/src/: gemm_native_benchmark.c  onnx_native_benchmark.c  vector_add_native_benchmark.c
CI-Examples/shared-enclave/: meson.build  shared-enclave.manifest.template
CI-Examples/shared-enclave/src/: poc_batch_kernels.cu  poc_batch_kernels.h  shared_service.c  vector_add.h  vector_add_kernel.cu
Documentation/: gpu_support_analysis.md  index.rst
Documentation/features/: shared-enclave-gpu.rst
cuda_proxy/: Makefile  proxy.c
docs/: RFC_Advanced_Mixed_Sensitivity_GPU.rst
docs/performance/: gpu_shared_enclave_analysis.rst
docs/proposals/: automated_parallel_mixed_sensitivity_gpu_workloads.rst
libos/include/: libos_aes_gcm.h  libos_gpu.h  libos_gpu_ipc.h
libos/src/: meson.build
libos/src/crypto/: libos_aes_gcm.c
libos/src/fs/: libos_fs_util.c
libos/src/gpu/: libos_gpu.c  meson.build
libos/src/ipc/: libos_ipc.c
libos/test/regression/: aes_gcm_test.c  tests.toml
